# batterysimulator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
model/: analysis  analysis.py
model/model_classes/: solar_data.py
utils/: logger.py
