[tool.poetry]
name = "battery-simulator"
version = "0.0.1"
description = "Analysis of solar production, consumption, and battery economics"
authors = ["Valerio Ribeiro <valerio.alipio.ribeiro@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.1"
streamlit = "^1.51.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
